--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-css-seletores-e-posicionamento/style.css
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-03-html-css-seletores-e-posicionamento/style.css
@@ -1,29 +1,41 @@
+<!--1 - Posicione o Mário acima do Goomba.
+2 - Posicione a tag p para que fique dentro do balão de fala.
+3 - Posicione o balão para que se torne uma fala de Bowser.-->
 
+/* 1 - Posicione o Mário acima do Goomba. */
+.mario {
+  width: 200px;
+  position: absolute;
+  left: 100px;
+  top: 100px;
+}
 
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-  }
-  
-  .width-and-height {
-    height: 50px;
-    width: 50px;
-  }
-  
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding { padding: 20px; 
-  
-  }
-  
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {margin: 30px;
-  
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {border: 5px solid; border-color: black;    
-    
-  }
+.goomba {
+  width: 100px;
+  position: absolute;
+  top: 400px;
+  left: 150px;
+}
+
+/* 3 - Posicione o balão para que se torne uma fala de Bowser. */
+.baloon {
+  position: absolute;
+  top: 250px;
+  left: 400px;
+}
+
+/* 2 - Posicione a tag p para que fique dentro do balão de fala. */
+.speach {
+  font-size: 25px;
+  position: absolute;
+  top: 290px;
+  left: 420px;
+  z-index: 2;
+}
+
+.bowser {
+  width: 200px;
+  position: absolute;
+  top: 300px;
+  left: 700px;
+}
