--- a/Fundamentos/bloco-06-HTML-e-CSS-Forms-flexbox-e-responsivo/dia-03-flexbox-pt1/aula.css
+++ b/Fundamentos/bloco-06-HTML-e-CSS-Forms-flexbox-e-responsivo/dia-03-flexbox-pt1/aula.css
@@ -2,6 +2,9 @@
 para a propriedade flex-direction .
 2 - Teste as possibilidades ( wrap e nowrap ) para a propriedade flex-wrap .
 3 - Teste as possibilidades para a propriedade flex-flow . */
+/* 
+
+
 .box {
   color: #9069EF;
   background-color: rgb(243, 243, 243);
@@ -17,4 +20,93 @@ para a propriedade flex-direction .
   background-color: #0fa36b;
   display: flex;
   flex-flow: column wrap-reverse;
+} */
+
+
+
+/* Exercicio 2 */
+
+
+.box {
+  color: #9069EF;
+  background-color: rgb(243, 243, 243);
+  border: 2px solid #232525;
+  font-size: 50px;
+  height: 60px;
+  margin: 10px 5px;
+  text-align: center;
+  width: 20%;
 }
+
+.box-container {
+  background-color: #0fa36b;
+  display: flex;
+  
+}
+
+
+
+
+/* exercicios 3 */
+
+/* .box-one {
+  color: #9069EF;
+  background-color: rgb(243, 243, 243);
+  border: 2px solid #232525;
+  font-size: 70px;
+  min-height: 80px;
+  margin: 10px 5px;
+  text-align: center;
+  width: 50px;
+}
+
+.box-two {
+  color: #9069EF;
+  background-color: rgb(243, 243, 243);
+  border: 2px solid #232525;
+  font-size: 50px;
+  min-height: 60px;
+  margin: 10px 5px;
+  text-align: center;
+  width: 50px;
+}
+
+.box-three {
+  color: #9069EF;
+  background-color: rgb(243, 243, 243);
+  border: 2px solid #232525;
+  font-size: 30px;
+  margin: 10px 5px;
+  min-height: 50px;
+  text-align: center;
+  width: 50px;
+}
+
+.box-container {
+  background-color: #0fa36b;
+  display: flex;
+} */
+
+
+
+/* exercicio 4 */
+
+
+/* .box {
+  color: #9069EF;
+  background-color: rgb(243, 243, 243);
+  border: 2px solid #232525;
+  font-size: 50px;
+  min-height: 60px;
+  margin: 10px 5px;
+  text-align: center;
+  width: 30%;
+}
+
+.box-container {
+  background-color: #0fa36b;
+  display: flex;
+  flex-wrap: wrap;
+  height: 600px;
+}
+     */
