--- a/Fundamentos/bloco-06-HTML-e-CSS-Forms-flexbox-e-responsivo/dia-05-css-responsivo-mobile-first/exercicio1.css
+++ b/Fundamentos/bloco-06-HTML-e-CSS-Forms-flexbox-e-responsivo/dia-05-css-responsivo-mobile-first/exercicio1.css
@@ -88,7 +88,7 @@ figure {
     font-size: 50px;
     line-height: 80px;
     background-color: rgb(198, 250, 189);
-    max-width: 80%;
+    max-width: 90%;
     align-items: center;
     margin: auto;
     
@@ -113,6 +113,28 @@ figure {
       margin: 0;
 }
 
+.cats {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  
+}
+.cats img {
+  width: 210px;
+  margin: 10px 40px;
+}
 
-
+.cats figure {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  align-items: center;
+  text-align: center;
+  font-size: 30px;
+  line-height: 35px;
+  border: 1px solid black;
+  margin: 10px;
+  margin-bottom: 50px;
+}
 }
