--- a/Fundamentos/bloco-06-HTML-e-CSS-Forms-flexbox-e-responsivo/dia-05-css-responsivo-mobile-first/exercicio2.css
+++ b/Fundamentos/bloco-06-HTML-e-CSS-Forms-flexbox-e-responsivo/dia-05-css-responsivo-mobile-first/exercicio2.css
@@ -10,7 +10,22 @@ deve ser posicionado? O que fazer com as informações do autor em cada tamanho 
 3 - Talvez você precise alterar o HTML um pouco, adicionando elementos para 
 facilitar a estilização, ou talvez mudando um bloco de lugar dentro da página.
  */
+body {
+  display: flex;
+  flex-direction: column;
+}
 
+header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+header p {
+  font-weight: 700;
+}
+
+ @media screen and (max-width:600px) {
 html {
   box-sizing: border-box;
 }
@@ -22,12 +37,8 @@ body{
   background-color: rgb(255, 235, 205);
 }
 
-
-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
+header p {
+  font-size: 40px;
 }
 
 header nav {
@@ -38,8 +49,6 @@ header nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  
   
 }
 .aside-one h2 {
@@ -64,6 +73,7 @@ header nav {
 .aside-two ul {
   font-size: 25px;
   margin-left: 30px;
+  margin-right: 30px;
 }
 
 .main-content {
@@ -73,8 +83,9 @@ header nav {
 }
 
 .main-content h1 {
-  font-size: 22px;
+  font-size: 30px;
   text-align: center;
+  margin: 20px 50px;
 
 }
 
@@ -93,6 +104,125 @@ footer {
   flex-direction: column;
   justify-content: space-between;
   margin: 0px 50px;
+  margin-bottom: 30px;
   text-align: justify;
 
 }
+
+footer h3 {
+  text-align: center;
+}
+
+}
+
+@media screen and  (min-width: 601px) {
+
+  body {
+    background-color: rgb(250, 192, 105);
+}
+
+
+header nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: flex-end;
+  align-content: space-between;
+  margin-right: 60px;
+}
+
+header nav ul li {
+  margin: 5px 10px;
+}
+
+header p {
+  font-size: 50px;
+  margin-top: 0px;
+}
+
+.aside-one h2 {
+  font-size: 45px;
+  margin-top: 10px;
+  margin-left: 150px;
+
+}
+
+.aside-one ul {
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+}
+
+.aside-one ul li {
+  font-size: 35px;
+  margin-left: 90px;
+}
+
+.aside-two {
+  display: flex;
+  flex-direction: column;
+}
+
+.aside-two h2 {
+font-size: 45px;
+margin-left: 150px;
+}
+
+.aside-two ul{
+  margin-top: 10px;
+  font-size: 35px;
+  margin-left: 90px;
+  
+}
+
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main-content h1 {
+  font-size: 45px;
+  margin-left: 120px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+
+
+}
+
+.main-content div { 
+font-size: 50px;
+display: flex;
+flex-direction: column;
+margin: 0px 70px;
+align-items: center;
+text-align: justify;
+}
+
+.main-content div p {
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+footer h3 {
+  font-size: 45px;
+  margin-left: 150px;
+  margin-top: 60px;
+}
+
+ footer p {
+   font-size: 33px;
+   margin: 0px 60px;
+   margin-bottom: 40px; 
+   text-align: justify;
+  }
+
+}
+  
